--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -29,7 +29,10 @@
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "js-yaml": "^4.1.0",
+    "nestjs-pino": "^3.1.1",
+    "pino": "^8.4.2",
+    "pino-http": "^8.2.0",
+    "pino-pretty": "^9.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -44,7 +47,6 @@
     "@turbo-succotash-libs/tsconfig": "*",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
-    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
