--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,6 +32,7 @@
     "nestjs-pino": "^3.1.1",
     "pino": "^8.4.2",
     "pino-http": "^8.2.0",
+    "pino-loki": "^2.0.3",
     "pino-pretty": "^9.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
