--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,8 +27,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.31.2",
+    "@opentelemetry/exporter-jaeger": "^1.5.0",
+    "@opentelemetry/exporter-prometheus": "^0.31.0",
+    "@opentelemetry/sdk-node": "^0.31.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "nestjs-otel": "^3.0.4",
     "nestjs-pino": "^3.1.1",
     "pino": "^8.4.2",
     "pino-http": "^8.2.0",
