chore: added a few packages for telemetry

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,6 @@ dist
 # .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/yarn,node
+
+# Ignore the database file
+packages/api/db.sqlite
