--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,11 +28,17 @@
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
     "@opentelemetry/auto-instrumentations-node": "^0.31.2",
+    "@opentelemetry/context-async-hooks": "^1.10.1",
+    "@opentelemetry/core": "^1.10.1",
     "@opentelemetry/exporter-jaeger": "^1.5.0",
     "@opentelemetry/exporter-prometheus": "^0.31.0",
+    "@opentelemetry/propagator-b3": "^1.10.1",
+    "@opentelemetry/propagator-jaeger": "^1.10.1",
     "@opentelemetry/sdk-node": "^0.31.0",
+    "@opentelemetry/sdk-trace-base": "^1.10.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "js-yaml": "^4.1.0",
     "nestjs-otel": "^3.0.4",
     "nestjs-pino": "^3.1.1",
     "pino": "^8.4.2",
@@ -53,6 +59,7 @@
     "@turbo-succotash-libs/tsconfig": "*",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
