--- a/data/grafana-data/datasources/datasource.yml
+++ b/data/grafana-data/datasources/datasource.yml
@@ -4,17 +4,18 @@ deleteDatasources:
   - name: Prometheus
   - name: Tempo
   - name: Loki
+  - name: Tempo-Multitenant
 
 datasources:
-  - name: Prometheus
-    type: prometheus
-    access: proxy
-    orgId: 1
-    url: http://prometheus:9090
-    basicAuth: false
-    isDefault: false
-    version: 1
-    editable: false
+  # - name: Prometheus
+  #   type: prometheus
+  #   access: proxy
+  #   orgId: 1
+  #   url: http://prometheus:9090
+  #   basicAuth: false
+  #   isDefault: false
+  #   version: 1
+  #   editable: false
   - name: Tempo
     type: tempo
     access: proxy
@@ -26,21 +27,21 @@ datasources:
     editable: true
     apiVersion: 1
     uid: tempo
-  - name: Tempo-Multitenant
-    type: tempo
-    access: proxy
-    orgId: 1
-    url: http://tempo:3100
-    basicAuth: false
-    isDefault: false
-    version: 1
-    editable: true
-    apiVersion: 1
-    uid: tempo-authed
-    jsonData:
-      httpHeaderName1: "Authorization"
-    secureJsonData:
-      httpHeaderValue1: "Bearer foo-bar-baz"
+  # - name: Tempo-Multitenant
+  #   type: tempo
+  #   access: proxy
+  #   orgId: 1
+  #   url: http://tempo:3100
+  #   basicAuth: false
+  #   isDefault: false
+  #   version: 1
+  #   editable: true
+  #   apiVersion: 1
+  #   uid: tempo-authed
+  #   jsonData:
+  #     httpHeaderName1: "Authorization"
+  #   secureJsonData:
+  #     httpHeaderValue1: "Bearer foo-bar-baz"
 
   - name: Loki
     type: loki
@@ -55,6 +56,6 @@ datasources:
     jsonData:
       derivedFields:
         - datasourceUid: tempo
-          matcherRegex: '"traceId":"([A-Za-z0-9]+)"'
+          matcherRegex: '"trace_id":"([A-Za-z0-9]+)"'
           name: TraceID
           url: $${__value.raw}
