--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,27 @@ version: '3.7'
 
 services:
   tempo:
-    image: grafana/tempo:1.0.1
+    image: grafana/tempo:1.5.0
     command: [ "-config.file=/etc/tempo.yaml" ]
     volumes:
       - ./etc/tempo-local.yaml:/etc/tempo.yaml
       - tempo_data:/tmp/tempo
     ports:
-      - "14268" # jaeger ingest, Jaeger - Thrift HTTP
+      # - "14268" # jaeger ingest, Jaeger - Thrift HTTP
+      - "14268:14268" # jaeger ingest, Jaeger - Thrift HTTP
       - "14250" # Jaeger - GRPC
       - "55680" # OpenTelemetry
-      - "3100" # tempo
       - "6831/udp" # Jaeger - Thrift Compact
       - "6832/udp" # Jaeger - Thrift Binary
-
+  # logging:
+  #   driver: loki
+  #   options:
+  #     loki-url: http://localhost:3100/loki/api/v1/push
   loki:
-    image: grafana/loki:2.2.1
+    image: grafana/loki:2.6.1
     command: -config.file=/etc/loki/loki-local.yaml
     ports:
-      - "3101:3100" # loki needs to be exposed so it receives logs
+      - "3100:3100" # loki needs to be exposed so it receives logs
     environment:
       - JAEGER_AGENT_HOST=tempo
       - JAEGER_ENDPOINT=http://tempo:14268/api/traces # send traces to Tempo
@@ -28,9 +31,8 @@ services:
     volumes:
       - ./etc/loki-local.yaml:/etc/loki/loki-local.yaml
       # - loki_data:/tmp/loki
-
   grafana:
-    image: grafana/grafana:8.1.0-ubuntu
+    image: grafana/grafana:9.1.1-ubuntu
     volumes:
       - ./data/grafana-data/datasources:/etc/grafana/provisioning/datasources
       - ./data/grafana-data/dashboards-provisioning:/etc/grafana/provisioning/dashboards
@@ -40,13 +42,12 @@ services:
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
     ports:
-      - "3000:3000"
+      - "3002:3000"
     depends_on:
       # - prometheus
-      - tempo
+      # - tempo
       - loki
       # - volume_exporter
-
 volumes:
   tempo_data: {}
   loki_data: {}
