--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,20 +27,31 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.1",
-    "@opentelemetry/auto-instrumentations-node": "^0.31.2",
+    "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/api-metrics": "^0.32.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.35.0",
     "@opentelemetry/context-async-hooks": "^1.10.1",
-    "@opentelemetry/core": "^1.10.1",
-    "@opentelemetry/exporter-jaeger": "^1.5.0",
-    "@opentelemetry/exporter-prometheus": "^0.31.0",
+    "@opentelemetry/core": "^1.8.0",
+    "@opentelemetry/exporter-jaeger": "^1.8.0",
+    "@opentelemetry/exporter-prometheus": "^0.34.0",
+    "@opentelemetry/host-metrics": "^0.31.0",
+    "@opentelemetry/instrumentation-express": "^0.32.0",
+    "@opentelemetry/instrumentation-graphql": "^0.33.0",
+    "@opentelemetry/instrumentation-nestjs-core": "^0.32.0",
+    "@opentelemetry/instrumentation-pino": "^0.33.0",
+    "@opentelemetry/instrumentation-winston": "^0.31.0",
     "@opentelemetry/propagator-b3": "^1.10.1",
     "@opentelemetry/propagator-jaeger": "^1.10.1",
-    "@opentelemetry/sdk-node": "^0.31.0",
+    "@opentelemetry/resources": "^1.10.1",
+    "@opentelemetry/sdk-node": "^0.34.0",
     "@opentelemetry/sdk-trace-base": "^1.10.1",
+    "@opentelemetry/semantic-conventions": "^1.10.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "js-yaml": "^4.1.0",
     "nestjs-otel": "^3.0.4",
     "nestjs-pino": "^3.1.1",
+    "opentelemetry-node-metrics": "^3.0.0",
     "pino": "^8.4.2",
     "pino-http": "^8.2.0",
     "pino-loki": "^2.0.3",
