--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - JAEGER_SAMPLER_PARAM=1
     volumes:
       - ./etc/loki-local.yaml:/etc/loki/loki-local.yaml
-      # - loki_data:/tmp/loki
+      - loki_data:/loki
   grafana:
     image: grafana/grafana:9.1.1-ubuntu
     volumes:
