--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,8 +26,29 @@
     "@nestjs/platform-express": "^10.4.7",
     "@nestjs/swagger": "^8.0.5",
     "@nestjs/typeorm": "^10.0.2",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.52.1",
+    "@opentelemetry/context-async-hooks": "^1.27.0",
+    "@opentelemetry/core": "^1.27.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.54.2",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.54.2",
+    "@opentelemetry/exporter-prometheus": "^0.54.2",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.54.2",
+    "@opentelemetry/propagator-b3": "^1.27.0",
+    "@opentelemetry/sdk-metrics": "^1.27.0",
+    "@opentelemetry/sdk-node": "^0.54.2",
+    "@opentelemetry/sdk-trace-base": "^1.27.0",
+    "@willsoto/nestjs-prometheus": "^6.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nestjs-otel": "^6.1.1",
+    "nestjs-pino": "^4.1.0",
+    "pino": "^9.5.0",
+    "pino-http": "^10.3.0",
+    "pino-loki": "^2.3.1",
+    "pino-opentelemetry-transport": "^1.0.1",
+    "pino-pretty": "^12.1.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
