chore(observability): added example for observability lib

--- a/libs/observability/package.json
+++ b/libs/observability/package.json
@@ -13,7 +13,8 @@
     "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
     "build:esm": "tsc -p tsconfig.esm.json && echo '{\"type\": \"module\"}' > dist/esm/package.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "example": "ts-node example/main.ts"
   },
   "exports": {
     ".": {
@@ -23,7 +24,8 @@
   },
   "devDependencies": {
     "@turbo-succotash-libs/eslint-config": "*",
-    "@turbo-succotash-libs/tsconfig": "*"
+    "@turbo-succotash-libs/tsconfig": "*",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
@@ -34,11 +36,14 @@
     "@opentelemetry/exporter-metrics-otlp-http": "^0.54.2",
     "@opentelemetry/exporter-trace-otlp-http": "^0.54.2",
     "@opentelemetry/propagator-b3": "^1.27.0",
+    "@opentelemetry/resources": "^1.27.0",
     "@opentelemetry/sdk-metrics": "^1.27.0",
     "@opentelemetry/sdk-node": "^0.54.2",
     "@opentelemetry/sdk-trace-base": "^1.27.0",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
     "pino": "^9.5.0",
     "pino-opentelemetry-transport": "^1.0.1",
-    "pino-pretty": "^12.1.0"
+    "pino-pretty": "^12.1.0",
+    "uuid": "^11.0.2"
   }
 }
