--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -4,8 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "lint": "eslint \"./**/*.js\""
+  },
+  "exports": {
+    ".": "./index.js"
+  },
   "devDependencies": {
-    "@turbo-succotash-libs/tsconfig": "*",
+    "@eslint/js": "^9.14.0",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.14.0",
@@ -16,6 +22,5 @@
     "prettier": "^3.3.3",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
-  },
-  "dependencies": {}
+  }
 }
