--- a/libs/eslint-config/package.json
+++ b/libs/eslint-config/package.json
@@ -22,5 +22,8 @@
     "prettier": "^3.3.3",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
+  },
+  "peerDependencies": {
+    "eslint": "^9.14.0"
   }
 }
