--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "29.5.14",
     "@types/node": "^22.9.0",
     "@types/supertest": "^6.0.2",
+    "eslint": "^9.14.0",
     "jest": "29.7.0",
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.20",
